--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,11 @@
 = README
 
 == 1. Mở rộng ứng dụng, với thông tin user được lưu trong CSDL
-ảnh minh chứng:
+ảnh minh chứng: 
+:image: https://github.com/trunghh11/gs-securing-web/blob/main/images/database.png
+:image: https://github.com/trunghh11/gs-securing-web/blob/main/images/user1.png
+:image: https://github.com/trunghh11/gs-securing-web/blob/main/images/user.png
 
 == 2. Hỗ trợ các vai trò USER, ADMIN. Vai trò ADMIN đc vào đường dẫn /admin
-ảnh minh chứn:
+ảnh minh chứng:
+:image: https://github.com/trunghh11/gs-securing-web/blob/main/images/admin_page.png
